Fix form layout problems in IE

--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -19,6 +19,10 @@
         }
     }
 
+    label > * {
+        max-width: 100%;
+    }
+
     [data-id="form"]:empty {
         display: block;
         height: 20rem;
@@ -34,6 +38,10 @@
 
     .text-content {
         width: 100%;
+
+        > plug-in {
+            width: 100%;
+        }
     }
 
     .row .col {
